# Gruppe-F-Programmentwurf-2.-Semester

.devcontainer/: devcontainer.json
code_4_exam/: CMakeLists.txt
code_4_exam/assets/: logo.txt
code_4_exam/include/: developer.hpp  junior_developer.hpp  senior_developer.hpp
code_4_exam/src/: developer.cpp  junior_developer.cpp  main.cpp  senior_developer.cpp
code_4_exam/tests/: CMakeLists.txt  developer_test.cpp
